@@ -1,5 +1,10 @@
 ===v6.1.2===
  * Added a new tag [LocType] to display the category of loss of control icon types.
+ ** Bug Fixes:
+ ** Designed a new protocol for sharing class spells to prevent the old version of it that was dramatically errored from leaking into a new version of it.
+ ** LastUpdateTime-type values should now only be set after an update completes so that in the event of a "script ran too long" error, the update will be ran again in the next cycle.
+ ** Icon Color Flash animations should now work correctly.
+ ** Rewrote (but mostly just refactored) the database initialization process so that it runs more logically, and also so it allows for upgrades in the "global" DB namespace to run when they are supposed to.
  
 ===v6.1.1===
  * Added a new text output handler for the Instance channel, and updated existing chat output methods for this channel.
